// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders with size 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.div
    size={32}
    theme={
      Object {
        "black": "#2C2C2C",
        "brand01": "#1785FB",
        "brand02": "#0F2D53",
        "brand03": "#47DB99",
        "grey": "#E2E6E3",
        "support01": "#F3522B",
        "support02": "#FDB32B",
        "support03": "#80B622",
        "type01": "#2C2C2C",
        "type02": "#747474",
        "type03": "#BABABA",
        "type04": "#fff",
        "ui01": "#fff",
        "ui02": "#F5F5F5",
        "ui03": "#E2E6E3",
        "ui04": "#D1D5D7",
        "white": "#fff",
      }
    }
    url="https://avatars3.githubusercontent.com/u/1799254"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "sc-bdVaJa hzJyBl",
      "size": 32,
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "sc-bdVaJa hzJyBl",
        "size": 32,
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`render renders without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.div
    size={24}
    theme={
      Object {
        "black": "#2C2C2C",
        "brand01": "#1785FB",
        "brand02": "#0F2D53",
        "brand03": "#47DB99",
        "grey": "#E2E6E3",
        "support01": "#F3522B",
        "support02": "#FDB32B",
        "support03": "#80B622",
        "type01": "#2C2C2C",
        "type02": "#747474",
        "type03": "#BABABA",
        "type04": "#fff",
        "ui01": "#fff",
        "ui02": "#F5F5F5",
        "ui03": "#E2E6E3",
        "ui04": "#D1D5D7",
        "white": "#fff",
      }
    }
    url=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "sc-bdVaJa iSZQSf",
      "size": 24,
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "sc-bdVaJa iSZQSf",
        "size": 24,
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`render renders without image 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.div
    size={24}
    theme={
      Object {
        "black": "#2C2C2C",
        "brand01": "#1785FB",
        "brand02": "#0F2D53",
        "brand03": "#47DB99",
        "grey": "#E2E6E3",
        "support01": "#F3522B",
        "support02": "#FDB32B",
        "support03": "#80B622",
        "type01": "#2C2C2C",
        "type02": "#747474",
        "type03": "#BABABA",
        "type04": "#fff",
        "ui01": "#fff",
        "ui02": "#F5F5F5",
        "ui03": "#E2E6E3",
        "ui04": "#D1D5D7",
        "white": "#fff",
      }
    }
    url=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "sc-bdVaJa iSZQSf",
      "size": 24,
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "sc-bdVaJa iSZQSf",
        "size": 24,
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
